refactor(licenses): Remove unwanted license fields and debloat types.go
